--- a/schedule_test/res/layout/activity_main.xml
+++ b/schedule_test/res/layout/activity_main.xml
@@ -3,80 +3,112 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.schedule_test.MainActivity" >
+    
+   	<LinearLayout android:id="@+id/layout_schedule_name"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:padding="16dp"
+        android:background="@color/schedule_blue_green" >
+        
+        <TextView android:id="@+id/schedule_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:text="Schedue #2"
+            android:textSize="18sp"
+            android:textColor="@color/schedule_name"
+            android:padding="5dp" />
+        
+   	</LinearLayout>
 
     <!-- weekdays on top -->
     <LinearLayout android:id="@+id/layout_weekdays"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_alignParentTop="true" >
+        android:layout_below="@+id/layout_schedule_name" >
         
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/schedule_blue_green" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:layout_weight="1"
-            android:text="@string/sun" />
+            android:gravity="bottom"
+            android:text="@string/sun"
+            android:textColor="@android:color/white"
+            android:background="@color/schedule_blue_green" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:layout_weight="1"
-            android:text="@string/mon" />
+            android:gravity="bottom"
+            android:text="@string/mon"
+            android:textColor="@android:color/white"
+            android:background="@color/schedule_blue_green" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:layout_weight="1"
-            android:text="@string/tue" />
+            android:gravity="bottom"
+            android:text="@string/tue"
+            android:textColor="@android:color/white"
+            android:background="@color/schedule_blue_green" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:layout_weight="1"
-            android:text="@string/wed" />
+            android:gravity="bottom"
+            android:text="@string/wed"
+            android:textColor="@android:color/white"
+            android:background="@color/schedule_blue_green" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:layout_weight="1"
-            android:text="@string/thr" />
+            android:gravity="bottom"
+            android:text="@string/thr"
+            android:textColor="@android:color/white"
+            android:background="@color/schedule_blue_green" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:layout_weight="1"
-            android:text="@string/fri" />
+            android:gravity="bottom"
+            android:text="@string/fri"
+            android:textColor="@android:color/white"
+            android:background="@color/schedule_blue_green" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:layout_weight="1"
-            android:text="@string/sat" />
+            android:gravity="bottom"
+            android:text="@string/sat"
+            android:textColor="@android:color/white"
+            android:background="@color/schedule_blue_green" />
     </LinearLayout>
     
     <ScrollView android:id="@+id/scroll_view"
     	android:layout_width="match_parent"
     	android:layout_height="match_parent"
-    	android:layout_below="@+id/layout_weekdays" >
+    	android:layout_below="@+id/layout_weekdays"    	 >
         
-        <RelativeLayout android:id="@+id/calendar_layout"
+        <RelativeLayout
             android:layout_width="match_parent"
-        	android:layout_height="match_parent"
-        	android:paddingTop="5dp" >
-        	
-            <TextView android:id="@+id/indicator_start"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
+        	android:layout_height="match_parent" >
             
-            <TextView android:id="@+id/indicator_end"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"  />
-            
-            <LinearLayout android:id="@+id/layout_all_grids"
+            <LinearLayout android:id="@+id/calendar_layout"
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
 		        android:orientation="horizontal"
-		        android:layout_alignParentTop="true" >
+		        android:layout_alignParentTop="true"
+		        android:layout_marginTop="24dp"
+		        android:layout_marginBottom="24dp" >
         	
 			    <com.example.schedule_test.ExpandableHeightGridView 
 			        android:id="@+id/gridview_time"
@@ -88,16 +120,122 @@
 				</com.example.schedule_test.ExpandableHeightGridView >
 				
 			    <com.example.schedule_test.ExpandableHeightGridView 
-			        android:id="@+id/gridview_days"
+			        android:id="@+id/gridview_sun"
 					android:layout_width="0dp"
 					android:layout_height="wrap_content"	
-					android:layout_weight="7"	    
-					android:numColumns="7"
+					android:layout_weight="1"	    
+					android:numColumns="1"
+					android:gravity="center"
+					android:listSelector="@android:color/transparent" >							
+				</com.example.schedule_test.ExpandableHeightGridView >	
+				
+			    <com.example.schedule_test.ExpandableHeightGridView 
+			        android:id="@+id/gridview_mon"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"	
+					android:layout_weight="1"	    
+					android:numColumns="1"
 					android:gravity="center"
 					android:listSelector="@android:color/transparent">							
-				</com.example.schedule_test.ExpandableHeightGridView >				
+				</com.example.schedule_test.ExpandableHeightGridView >		
+				
+			    <com.example.schedule_test.ExpandableHeightGridView 
+			        android:id="@+id/gridview_tue"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"	
+					android:layout_weight="1"	    
+					android:numColumns="1"
+					android:gravity="center"
+					android:listSelector="@android:color/transparent">							
+				</com.example.schedule_test.ExpandableHeightGridView >	
+				
+			    <com.example.schedule_test.ExpandableHeightGridView 
+			        android:id="@+id/gridview_wed"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"	
+					android:layout_weight="1"	    
+					android:numColumns="1"
+					android:gravity="center"
+					android:listSelector="@android:color/transparent">							
+				</com.example.schedule_test.ExpandableHeightGridView >	
+				
+			    <com.example.schedule_test.ExpandableHeightGridView 
+			        android:id="@+id/gridview_thr"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"	
+					android:layout_weight="1"	    
+					android:numColumns="1"
+					android:gravity="center"
+					android:listSelector="@android:color/transparent">							
+				</com.example.schedule_test.ExpandableHeightGridView >	
+				
+			    <com.example.schedule_test.ExpandableHeightGridView 
+			        android:id="@+id/gridview_fri"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"	
+					android:layout_weight="1"	    
+					android:numColumns="1"
+					android:gravity="center"
+					android:listSelector="@android:color/transparent">							
+				</com.example.schedule_test.ExpandableHeightGridView >	
+				
+			    <com.example.schedule_test.ExpandableHeightGridView 
+			        android:id="@+id/gridview_sat"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"	
+					android:layout_weight="1"	    
+					android:numColumns="1"
+					android:gravity="center"
+					android:listSelector="@android:color/transparent">							
+				</com.example.schedule_test.ExpandableHeightGridView >		
 			    
 			</LinearLayout>
+        	
+            <TextView android:id="@+id/indicator_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ime_bg"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="00:00"
+                android:textColor="@android:color/white"
+                android:visibility="gone" />
+            
+            <TextView android:id="@+id/indicator_end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ime_bg"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="00:00"
+                android:textColor="@android:color/white"
+                android:visibility="gone"  />
+            
+            <ImageView android:id="@+id/indicator_up"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/up"
+                android:visibility="gone" />
+            
+            <ImageView android:id="@+id/indicator_down"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/down"
+                android:visibility="gone" />
+            
+            <ImageView android:id="@+id/indicator_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/delete"
+                android:visibility="gone" />
+            
+            <View 
+			    android:id="@+id/view_interaction"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"	 
+				android:background="@android:color/transparent"
+				android:visibility="gone">							
+			</View >
             
 		</RelativeLayout>
 	</ScrollView>
